# Esame_lab

ShoppingListApp/: CMakeLists.txt  README.md
ShoppingListApp/src/: Category.h  Observer.h  ShoppingItem.h  ShoppingList.h  Subject.h  User.h  main.cpp
ShoppingListApp/tests/: CategoryTest.cpp  ObserverTest.cpp  SharedListTest.cpp  ShoppingItemTest.cpp  ShoppingListTest.cpp
